fix object endpoints error return
