# openapi.json
@@ -70,7 +70,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -78,7 +78,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           }
@@ -107,7 +107,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -115,7 +115,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -123,7 +123,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           }
@@ -154,7 +154,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -162,7 +162,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -170,7 +170,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           }
@@ -196,7 +196,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -204,7 +204,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -212,7 +212,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           }
@@ -243,7 +243,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -251,7 +251,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -259,7 +259,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           }
@@ -283,7 +283,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -291,7 +291,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -299,7 +299,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -307,7 +307,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           }
@@ -348,7 +348,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -356,7 +356,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -364,7 +364,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -372,7 +372,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           }
@@ -411,7 +411,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -419,7 +419,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -427,7 +427,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -435,7 +435,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           }
@@ -461,7 +461,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -469,7 +469,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           },
@@ -477,7 +477,7 @@
             "description": "",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/InternalError" }
+                "schema": { "$ref": "#/components/schemas/HashMap" }
               }
             }
           }
@@ -572,10 +572,6 @@
           }
         }
       },
-      "ErrorMessages": {
-        "type": "array",
-        "items": { "$ref": "#/components/schemas/ErrorMessage" }
-      },
       "HashMap": {
         "type": "object",
         "additionalProperties": {
@@ -588,20 +584,6 @@
         "type": "object",
         "required": ["db"],
         "properties": { "db": { "type": "boolean" } }
-      },
-      "InternalError": {
-        "type": "object",
-        "required": ["status_code", "messages"],
-        "properties": {
-          "messages": {
-            "type": "object",
-            "additionalProperties": {
-              "$ref": "#/components/schemas/ErrorMessages"
-            },
-            "propertyNames": { "type": "string" }
-          },
-          "status_code": { "type": "integer", "format": "int32", "minimum": 0 }
-        }
       },
       "MoveObjectRequest": {
         "type": "object",
